--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+label {
+  @apply block pt-2;
+}
+
+label span {
+  @apply text-indigo-700 font-semibold;
+}
+
+label select {
+  @apply mt-1 block w-full;
+}
+
+.hasStar {
+  @apply text-yellow-500;
+}
