--- a/public/style.css
+++ b/public/style.css
@@ -19310,6 +19310,26 @@ label select {
   margin-top: 0.25rem;
 }
 
+@media (min-width: 1024px) {
+  canvas {
+    width: 540px;
+    height: 540px;
+  }
+}
+
+@media (min-width: 768px, max-width: 1023px) {
+  canvas {
+    width: 405px;
+    height: 405px;
+  }
+}
+
+@media (max-width: 767px) canvas {
+  width: 304px;
+
+  height: 304px;
+}
+
 @media (min-width: 640px) {
   .sm\:space-y-0 > :not(template) ~ :not(template) {
     --space-y-reverse: 0;
