--- a/public/style.css
+++ b/public/style.css
@@ -19324,10 +19324,11 @@ label select {
   }
 }
 
-@media (max-width: 767px) canvas {
-  width: 304px;
-
-  height: 304px;
+@media (max-width: 767px) {
+  canvas {
+    width: 304px;
+    height: 304px;
+  }
 }
 
 @media (min-width: 640px) {
